--- a/app/src/main/res/layout/activity_edit_review.xml
+++ b/app/src/main/res/layout/activity_edit_review.xml
@@ -9,7 +9,7 @@
     <Button
         android:id="@+id/editReviewBtn"
         android:layout_width="375dp"
-        android:layout_height="72dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:background="@drawable/rounded_button"
         android:fontFamily="@font/font4"
@@ -27,18 +27,17 @@
 
     <EditText
         android:id="@+id/review"
+        android:inputType="textMultiLine"
         android:layout_width="368dp"
         android:layout_height="240dp"
         android:layout_marginStart="-1dp"
         android:layout_marginTop="300dp"
         android:layout_marginEnd="1dp"
         android:background="@drawable/rounded_review_text_area"
+        android:maxLines="12"
         android:ems="10"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp"
-        android:inputType="textMultiLine"
         android:fontFamily="@font/font6"
-        android:gravity="center"
+        android:gravity="center_horizontal"
         android:hint="@string/edit2"
         android:importantForAutofill="no"
         android:textSize="20sp"
@@ -53,23 +52,24 @@
 
     <RatingBar
         android:id="@+id/ratingBar"
-        android:layout_width="245dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="320dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="310dp"
         android:numStars="5"
         android:stepSize="0.5"
         app:layout_constraintBottom_toTopOf="@+id/review"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="SpeakableTextPresentCheck" />
+        tools:ignore="SpeakableTextPresentCheck"
+        android:theme="@style/RatingBar"/>
 
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="75dp"
         android:contentDescription="@string/string_rating"
         app:layout_constraintBottom_toTopOf="@+id/ratingBar"
         app:layout_constraintStart_toStartOf="parent"
@@ -88,8 +88,8 @@
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="50dp"
-        android:layout_height="44dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="350dp"
         android:layout_marginBottom="10dp"
