adding fully completed room package function

--- a/app/src/main/res/layout/activity_add_package.xml
+++ b/app/src/main/res/layout/activity_add_package.xml
@@ -26,7 +26,7 @@
         android:layout_height="72dp"
         android:background="@drawable/rounded_text"
         android:gravity="center"
-        android:fontFamily="@font/poppins_regular"
+        android:fontFamily="@font/font4"
         android:textSize="20sp"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,7 +41,7 @@
         android:importantForAutofill="no"
         android:layout_marginTop="10dp"
         android:background="@drawable/rounded_text"
-        android:fontFamily="@font/poppins_regular"
+        android:fontFamily="@font/font4"
         android:gravity="center"
         android:hint="@string/number"
         android:textColor="@color/black"
@@ -60,7 +60,7 @@
         android:layout_height="72dp"
         android:background="@drawable/rounded_text"
         android:gravity="center"
-        android:fontFamily="@font/poppins_regular"
+        android:fontFamily="@font/font4"
         android:textSize="20sp"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
@@ -307,6 +307,7 @@
         android:inputType="textMultiLine"
         android:hint="@string/description"
         android:importantForAutofill="no"
+        android:fontFamily="@font/font4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintStart_toEndOf="@+id/numRooms"
@@ -318,7 +319,7 @@
         android:layout_height="72dp"
         android:importantForAutofill="no"
         android:background="@drawable/rounded_text"
-        android:fontFamily="@font/poppins_regular"
+        android:fontFamily="@font/font4"
         android:layout_marginTop="10dp"
         android:gravity="center"
         android:hint="@string/nu_of_rooms"
@@ -334,7 +335,7 @@
         android:layout_height="31dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="100dp"
-        android:fontFamily="@font/poppins_regular"
+        android:fontFamily="@font/font4"
         android:textSize="20sp"
         android:textColor="@color/black"
         android:text="@string/refundable"
@@ -359,7 +360,7 @@
         android:layout_height="72dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/rounded_green_button"
-        android:fontFamily="@font/poppins_regular"
+        android:fontFamily="@font/font4"
         android:gravity="center"
         android:text="@string/add_package"
         android:textSize="20sp"
