--- a/app/src/main/res/layout/activity_all_packages.xml
+++ b/app/src/main/res/layout/activity_all_packages.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,4 +10,11 @@
         android:id="@+id/include1"
         layout="@layout/action_bar_package"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/allPackagesRecView"
+        android:layout_width="match_parent"
+        android:layout_marginTop="59dp"
+
+        android:layout_height="wrap_content" />
+
+</RelativeLayout>
